<resources>
    <string name="app_name" translatable="false">SdkContract</string>
    <string name="sl_str_chg">Chg</string>
    <string name="sl_str_current">Current</string>
    <string name="sl_str_no_network_tips">Network disconnection, please check the network settings</string>
    <string name="sl_str_vol">Vol</string>
    <string name="sl_str_name">Name</string>
    <string name="sl_str_main">Main</string>
    <string name="sl_str_new">New</string>
    <string name="sl_str_funds_rate">Funds rate</string>
    <string name="sl_str_24h_vol">24h Vol</string>
    <string name="sl_str_time">Time</string>
    <string name="sl_str_time2">Time</string>
    <string name="sl_str_1min">1min</string>
    <string name="sl_str_5min">5min</string>
    <string name="sl_str_15min">15分</string>
    <string name="sl_str_30min">30min</string>
    <string name="sl_str_60min">60min</string>
    <string name="sl_str_2hour">2hour</string>
    <string name="sl_str_4hour">4hour</string>
    <string name="sl_str_6hour">6hour</string>
    <string name="sl_str_12hour">12hour</string>
    <string name="sl_str_1day">1day</string>
    <string name="sl_str_1week">1week</string>
    <string name="sl_str_more">More</string>
    <string name="sl_str_main_figure">Main</string>
    <string name="sl_str_vice_figure">Vice</string>
    <string name="sl_str_buy_open_long">Buy Open(Long)</string>
    <string name="sl_str_sell_open_short">Sell Open(Short)</string>
    <string name="sl_str_optional">Favorites</string>
    <string name="sl_str_order_book">Order Book</string>
    <string name="sl_str_trade_history">Trade History</string>
    <string name="sl_str_depth_chart">Depth Chart</string>
    <string name="sl_str_inverse">Inverse</string>
    <string name="sl_str_simulation">Mock</string>
    <string name="sl_str_amount">Amount</string>
    <string name="sl_str_price">Price</string>
    <string name="sl_str_bid_buy">Bid</string>
    <string name="sl_str_ask_sell">Ask</string>
    <string name="sl_str_volume">Volume</string>
    <string name="sl_str_sell">Sell</string>
    <string name="sl_str_buy">Buy</string>
    <string name="sl_str_direction">Direction</string>
    <string name="sl_str_open_position">Open</string>
    <string name="sl_str_close_position_tips">Before close position, you need to cancel the closing order of the unfilled position</string>
    <string name="sl_str_close_position">Close</string>
    <string name="sl_str_menu">Menu</string>
    <string name="sl_str_trade_records">Records</string>
    <string name="sl_str_contract_settings">Contract Settings</string>
    <string name="sl_str_contract_guide">Contract Guide</string>
    <string name="sl_str_contract_calculator">Contract Calculator</string>
    <string name="sl_str_limit_order">Limit Order</string>
    <string name="sl_str_market_order">Market</string>
    <string name="sl_str_buy1_price">Bid P1</string>
    <string name="sl_str_sell1_price">Ask P1</string>
    <string name="sl_str_trigger_price_type">Trigger Price Type</string>
    <string name="sl_str_trigger_time">Trigger Time</string>
    <string name="sl_str_trigger_price">Trigger Price</string>
    <string name="sl_str_limit_price_simple">Limit</string>
    <string name="sl_str_market_price_simple">Market</string>
    <string name="sl_str_market_price">Market Price</string>
    <string name="sl_str_entrust_cost">Cost</string>
    <string name="sl_str_buy_open_up_to">Max</string>
    <string name="sl_str_sell_open_up_to">Max</string>
    <string name="sl_str_long_position">Position</string>
    <string name="sl_str_short_position">Position</string>
    <string name="sl_str_buy_close_up_to">Max</string>
    <string name="sl_str_sell_close_up_to">Max</string>
    <string name="sl_str_buy_close_short">Buy Close(Long)</string>
    <string name="sl_str_sell_close_long">Sell Close(Short)</string>
    <string name="sl_str_avbl">Avbl</string>
    <string name="sl_str_skip">Skip</string>
    <string name="sl_str_funds_transfer">Funds Transfer</string>
    <string name="sl_str_buy_open">Buy Open</string>
    <string name="sl_str_sell_open">Sell Open</string>
    <string name="sl_str_buy_close">Buy Close</string>
    <string name="sl_str_sell_close">Sell Close</string>
    <string name="sl_str_hide_entrust">Hidden Order</string>
    <string name="sl_str_iceberg_entrust">Iceberg Order</string>
    <string name="sl_str_passive_entrust">Post-only</string>
    <string name="sl_str_trigger_entrust" translatable="false">Trigger Order</string>
    <string name="sl_str_stop_loss_entrust">Stop Limited</string>
    <string name="sl_str_stop_surplus_entrust">Take Profit</string>
    <string name="sl_str_entrust_price">Order Price</string>
    <string name="sl_str_entrust_volume">Order Volume</string>
    <string name="sl_str_deal_price">Exec Price</string>
    <string name="sl_str_entrust_value">Order Value</string>
    <string name="sl_str_cancel2">Cancel</string>
    <string name="sl_str_execution_price">Execution Price</string>
    <string name="sl_str_execution_volume">Execution Volume</string>
    <string name="sl_str_execution">Execution</string>
    <string name="sl_str_deadline">Deadline</string>
    <string name="sl_str_index_price_simple">Index</string>
    <string name="sl_str_tag_price_simple">Mark</string>
    <string name="sl_str_fair_price_simple">Fair</string>
    <string name="sl_str_latest_price_simple">Latest</string>
    <string name="sl_str_open_orders">Open Orders</string>
    <string name="sl_str_open_plan">Open Plans</string>
    <string name="sl_str_order_history">Order History</string>
    <string name="sl_str_plan_history">Plan History</string>
    <string name="sl_str_order_complete">Complete</string>
    <string name="sl_str_order_canceled">Canceled</string>
    <string name="sl_str_user_canceled">User Canceled</string>
    <string name="sl_str_system_canceled">System Canceled</string>
    <string name="sl_str_order_part_filled">Part Filled</string>
    <string name="sl_str_order_timeout">Time out</string>
    <string name="sl_str_insufficient">Insufficient</string>
    <string name="sl_str_force_close_details">Details</string>
    <string name="sl_str_reduce_position_details">Details</string>
    <string name="sl_str_bankruptcy_details">Details</string>
    <string name="sl_str_system_cancel_reason2">Forced liquidation has expired,the order was cancelled cancelled.</string>
    <string name="sl_str_system_cancel_reason3">Due to insufficient margin, part of the orders was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason4">Due to insufficient frozen margin，part of the orders was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason5">The orders cannot clinch a deal，part of the orders was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason6">After the commission will cause other positions forced liquidation，the order was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason7">There are open orders when the ADL is performed，the order was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason8">System Cancelled</string>
    <string name="sl_str_system_cancel_reason9">Position quantity error，the order was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason10">Delegate type illegal，the order was cancelled by the system.</string>
    <string name="sl_str_system_cancel_reason11">Cannot close a deal with your reverse order.</string>
    <string name="sl_str_trigger_failed_reason4">Order will trigger liquidation</string>
    <string name="sl_str_trigger_failed_reason5">Order is invalid</string>
    <string name="sl_str_trigger_failed_reason6">User assets is in the host</string>
    <string name="sl_str_trigger_failed_reason7">Position is not exist</string>
    <string name="sl_str_trigger_failed_reason8">Position volum is not enough</string>
    <string name="sl_str_trigger_failed_reason9">Position has already closed</string>
    <string name="sl_str_trigger_failed_reason10">Contract has suspended from trading</string>
    <string name="sl_str_trigger_failed_reason11">Opposite direction order is exist</string>
    <string name="sl_str_trigger_failed_reason12">Contract is offline</string>
    <string name="sl_str_trigger_failed_reason13">Unknown error</string>
    <string name="sl_str_rose">rose to</string>
    <string name="sl_str_fall">fall to</string>
    <string name="sl_str_wiped_out_tips0">At %1$s, the Mark Price of %2$s contract is %3$s, your position %4$s margin rate is less than the maintenance margin rate of %5$s, thus triggering the liquidated</string>
    <string name="sl_str_wiped_out_tips1">At %1$s, the Mark Price of %2$s contract is %3$s, your position %4$s margin rate is less than the maintenance margin rate of %5$s, thus triggering the brust</string>
    <string name="sl_str_wiped_out_tips2">According to the insurance fund and the maintenance margin, Order to the market at the price of %1$s, and the proceeds of the position are settled according to the order price, but the actual transaction price of the position closing may not be equal to the order price.</string>
    <string name="sl_str_force_close_mechanism">Forced Liquidated Principle</string>
    <string name="sl_str_automatically_reduce">Automatically Reduce Principle</string>
    <string name="sl_str_float_gains_intro">Current profit and loss from all open positions.</string>
    <string name="sl_str_position_margin_intro">The portion of your margin that is assigned to the initial margin requirements on your open positions. This is the entry value of all contracts you hold divided by the selected leverage, plus unrealised profit and loss.</string>
    <string name="sl_str_entrust_margin_intro">The portion of your margin that is assigned to the initial margin requirements on your open orders.</string>
    <string name="sl_str_contract_term">Contract Term</string>
    <string name="sl_str_reduce_position_tips">In %1$s, the Mark Price is %2$s. According to the profit ranking PnL will automatically reduce your position with the opponent at the price of %3$s.</string>
    <string name="sl_str_trigger_failed_info" translatable="false">At %1$s, %2$s %3$s come to %4$s, the automatic execution of the plan delegate is triggered, the trigger fails, the reason for the failure: %5$s.</string>
    <string name="sl_str_no_more_data">No more data.</string>
    <string name="sl_str_open_price0">Open Price</string>
    <string name="sl_str_close_price0">Close Price</string>
    <string name="sl_str_open_price">Open Price</string>
    <string name="sl_str_open_price2">Open Price:</string>
    <string name="sl_str_close_price">Close Price</string>
    <string name="sl_str_floating_gains">Unrealised PNL</string>
    <string name="sl_str_floating_gains2">Unrealised PNL:</string>
    <string name="sl_str_full_position">Cross</string>
    <string name="sl_str_gradually_position">Fixed</string>
    <string name="sl_str_confirm_close_position">Close Position Confirm</string>
    <string name="sl_str_pairs">Pairs</string>
    <string name="sl_str_display_unit">Display Unit</string>
    <string name="sl_str_pnl_calculator">PNL Calculator</string>
    <string name="sl_strategy_effective_time">Strategy Effective Time</string>
    <string name="sl_str_contracts_unit2">Cont</string>
    <string name="sl_str_coin_unit2">Coin</string>
    <string name="sl_str_in_24_hours">24 Hours</string>
    <string name="sl_str_in_7_days">7 Days</string>
    <string name="sl_str_caution">Caution</string>
    <string name="sl_str_plan_setting_caution">The options changed only effect to plan orders in future，will not affect the plan before.</string>
    <string name="sl_str_plan_entrust">Plan</string>
    <string name="sl_str_index_price">Index Price</string>
    <string name="sl_str_fair_price">Fair Price</string>
    <string name="sl_str_latest_price">Latest Price</string>
</resources>