<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/sl_colorDefaultDark" >

    <RelativeLayout
        android:id="@+id/rl_radio"
        android:layout_width="wrap_content"
        android:layout_height="340dp">

        <RadioGroup
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <com.bmtc.sdk.contract.view.material.MaterialRadioButton
                android:id="@+id/tab_optional"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:checked="true"
                android:focusable="false"
                android:text="@string/sl_str_optional"
                android:textColor="@color/sl_whiteText"
                android:textSize="16sp" />

            <com.bmtc.sdk.contract.view.material.MaterialRadioButton
                android:id="@+id/tab_usdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:checked="true"
                android:focusable="false"
                android:text="USDT"
                android:textColor="@color/sl_whiteText"
                android:textSize="16sp" />

            <com.bmtc.sdk.contract.view.material.MaterialRadioButton
                android:id="@+id/tab_inverse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:focusable="false"
                android:text="@string/sl_str_inverse"
                android:textColor="@color/sl_whiteText"
                android:textSize="16sp" />


            <com.bmtc.sdk.contract.view.material.MaterialRadioButton
                android:id="@+id/tab_simulation"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:focusable="false"
                android:text="@string/sl_str_simulation"
                android:textColor="@color/sl_whiteText"
                android:textSize="16sp" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_toRightOf="@+id/rl_radio">
        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/sl_colorDefault">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/sl_grayText"
                android:text="@string/sl_str_pairs"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_chg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/sl_grayText"
                android:text="@string/sl_str_chg"
                android:textSize="14sp"/>
        </RelativeLayout>

        <com.bmtc.sdk.contract.view.scrollview.ObservableRecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_title"/>
    </RelativeLayout>

</RelativeLayout>
